# 6088031-sands-python

./: README.md  helloworld.py  pyproject.toml  signal_and_signalchange.py  test.py  utils.py
src/systems_and_signals_with_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_signals.py
